crates/keron-lang/tests/corpus/errors/check/struct_default_required_after_default.keron
# Required fields must precede defaulted ones — same rule fn
# parameters follow. Otherwise positional resolution becomes
# ambiguous about which positional fills which field.
struct Bad {
  a: Int = 1,
  b: Int,
}
